[gd_scene load_steps=2 format=3 uid="uid://clsyu1bcrjkxo"]

[ext_resource type="Script" uid="uid://b7kpc7bs7304g" path="res://Entities/Abilities/inventory/slot.gd" id="1_x3alu"]

[node name="Slot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
script = ExtResource("1_x3alu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 1
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 15
text = "99"

[node name="UsesLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 1
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 15
text = "99"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
